--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Smart Expert - онлайн сообщество для развития, продвижения и монетизации экспертных знаний</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="css/newland.css">
 </head>
@@ -31,13 +31,16 @@
                     </div>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Каталог курсов</a>
+                    <a class="nav-link" href="#">Расписание</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">О компании</a>
+                    <a class="nav-link" href="#">Продюсирование</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Тарифы</a>
+                    <a class="nav-link" href="#">Наши эксперты</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Цены</a>
                 </li>
             </ul>
             <form class="form-inline my-2 my-lg-0">
@@ -73,36 +76,36 @@
     <section class="sec sec_2">
         <div class="container">
             <div class="row flex-md-nowrap">
-                <div class="col-md col-6">
+                <a href="#" class="col-md col-6 media_wrapp">
                     <div class="media">
                         <div class="icon icon_1"></div>
                         <p>Платформа для онлайн-обучения</p>
                     </div>
-                </div>
-                <div class="col-md col-6">
+                </a>
+                <a href="#" class="col-md col-6 media_wrapp">
                     <div class="media">
                         <div class="icon icon_2"></div>
                         <p>Инструменты маркетинга</p>
                     </div>
-                </div>
-                <div class="col-md col-6">
+                </a>
+                <a href="#" class="col-md col-6 media_wrapp">
                     <div class="media">
                         <div class="icon icon_3"></div>
                         <p>Глобальный <br> поиск экспертов</p>
                     </div>
-                </div>
-                <div class="col-md col-6">
+                </a>
+                <a href="#" class="col-md col-6 media_wrapp">
                     <div class="media">
                         <div class="icon icon_4"></div>
                         <p>Деловая <br> социальная сеть</p>
                     </div>
-                </div>
-                <div class="col-md col-6">
+                </a>
+                <a href="#" class="col-md col-6 media_wrapp">
                     <div class="media">
                         <div class="icon icon_5"></div>
                         <p>Продвижение личного бренда</p>
                     </div>
-                </div>
+                </a>
             </div>
         </div>
     </section>
@@ -361,8 +364,8 @@
                     <div class="col-md-6">
                         <div class="slide_bg">
                             <div class="imageSlider">
-                                <img src="img/sec_8/slide_1.jpg">
-                                <img src="img/sec_8/slide_1.jpg">
+                                <img src="img/sec_8/prodvizhenie_lichnogo_brenda_1.jpg">
+                                <img src="img/sec_8/prodvizhenie_lichnogo_brenda_1.jpg">
                             </div>
                         </div>
                     </div>
@@ -378,7 +381,7 @@
                 <div class="row flex-md-row-reverse align-items-center">
                     <div class="col-md-6">
                         <div class="slide_bg">
-                            <img src="img/sec_8/slide_1.jpg">
+                            <img src="img/sec_8/marketing_instrument_1.jpg">
                         </div>
                     </div>
                     <div class="col-md-6">
@@ -395,8 +398,8 @@
                     <div class="col-md-6">
                         <div class="slide_bg">
                             <div class="imageSlider">
-                                <img src="img/sec_8/slide_1.jpg">
-                                <img src="img/sec_8/slide_1.jpg">
+                                <img src="img/sec_8/platforma_dlya_obuchenia_1.jpg">
+                                <img src="img/sec_8/platforma_dlya_obuchenia_1.jpg">
                             </div>
                         </div>
                     </div>
@@ -412,7 +415,7 @@
                 <div class="row flex-md-row-reverse align-items-center">
                     <div class="col-md-6">
                         <div class="slide_bg">
-                            <img src="img/sec_8/slide_1.jpg">
+                            <img src="img/sec_8/delovaya_socialnaya_set_1.jpg">
                         </div>
                     </div>
                     <div class="col-md-6">
@@ -428,8 +431,8 @@
                     <div class="col-md-6">
                         <div class="slide_bg">
                             <div class="imageSlider">
-                                <img src="img/sec_8/slide_1.jpg">
-                                <img src="img/sec_8/slide_1.jpg">
+                                <img src="img/sec_8/globalnyi_poisk_1.jpg">
+                                <img src="img/sec_8/globalnyi_poisk_1.jpg">
                             </div>
                         </div>
                     </div>
@@ -719,8 +722,8 @@
                 pause: 3500,
                 keyPress: true,
                 controls: true,
-                prevHtml: '<svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 28 28" fill="none"><path d="M14 28C21.7156 28 28 21.7156 28 14C28 6.28444 21.7156 -1.35795e-06 14 -6.8343e-07C6.28444 -8.9145e-09 -3.80578e-06 6.28445 -3.13127e-06 14C-2.45675e-06 21.7156 6.28444 28 14 28ZM15.8044 7.40444L17.7956 9.39555L13.1911 14L17.7956 18.6044L15.8044 20.5956L9.20889 14L15.8044 7.40444Z" fill="#DBDBDB"></svg>',
-                nextHtml: '<svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 28 28" fill="none"><path d="M14 28C21.7156 28 28 21.7156 28 14C28 6.28444 21.7156 -1.35795e-06 14 -6.8343e-07C6.28444 -8.9145e-09 -3.80578e-06 6.28445 -3.13127e-06 14C-2.45675e-06 21.7156 6.28444 28 14 28ZM15.8044 7.40444L17.7956 9.39555L13.1911 14L17.7956 18.6044L15.8044 20.5956L9.20889 14L15.8044 7.40444Z" fill="#DBDBDB"></svg>',
+                prevHtml: '<svg width="15" height="28" viewBox="0 0 15 28" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M14.0532 27.2416C14.4224 26.8724 14.4224 26.2724 14.0532 25.9032L2.26144 14.1346L14.0532 2.34284C14.4224 1.97363 14.4224 1.37366 14.0532 1.00445C13.684 0.635236 13.084 0.635236 12.7148 1.00445L0.276925 13.4423C0.0923196 13.6269 1.54154e-05 13.8577 1.54184e-05 14.1115C1.54211e-05 14.3423 0.0923197 14.5961 0.276925 14.7807L12.7148 27.2185C13.084 27.6108 13.684 27.6108 14.0532 27.2416Z" fill="#BDBDBD"/></svg>',
+                nextHtml: '<svg width="15" height="28" viewBox="0 0 15 28" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M14.0532 27.2416C14.4224 26.8724 14.4224 26.2724 14.0532 25.9032L2.26144 14.1346L14.0532 2.34284C14.4224 1.97363 14.4224 1.37366 14.0532 1.00445C13.684 0.635236 13.084 0.635236 12.7148 1.00445L0.276925 13.4423C0.0923196 13.6269 1.54154e-05 13.8577 1.54184e-05 14.1115C1.54211e-05 14.3423 0.0923197 14.5961 0.276925 14.7807L12.7148 27.2185C13.084 27.6108 13.684 27.6108 14.0532 27.2416Z" fill="#BDBDBD"/></svg>',
                 enableTouch: true,
                 enableDrag: true,
                 freeMove: true,
