start konstantin landing

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <!-- fixed header -->
     <nav class="navbar navbar-expand-md fixed-top">
-        <a class="navbar-brand" href="#"><img src="img/logo.svg" alt=""></a>
+        <a class="navbar-brand" href="#"><img src="img/logo.png" alt=""></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon">
                 <img src="img/nav/burger.svg" alt="burger">
@@ -22,101 +22,101 @@
 
         <div class="collapse navbar-collapse" id="navbarsExampleDefault">
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Продукты <img src="img/nav/arrow.svg" alt="arrow"></a>
-                    <div class="dropdown-menu" aria-labelledby="dropdown01">
-                        <a class="dropdown-item" href="#">Action</a>
-                        <a class="dropdown-item" href="#">Another action</a>
-                        <a class="dropdown-item" href="#">Something else here</a>
-                    </div>
-                </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Расписание</a>
+                    <a class="nav-link" href="#">Об эксперте</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Продюсирование</a>
+                    <a class="nav-link" href="#">Мои проекты</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Наши эксперты</a>
+                    <a class="nav-link" href="#">Моя экспертность</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Цены</a>
+                    <a class="nav-link" href="#">Деловые контакты </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Мои статьи</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Отзывы</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Я - наставник</a>
                 </li>
             </ul>
             <form class="form-inline my-2 my-lg-0">
-                <a href="#" class="btn btn-success-1 my-2 my-sm-0 mr-sm-2">Пробная версия</a>
                 <a href="#" class="btn btn-success-2 my-2 my-sm-0">Войти</a>
             </form>
         </div>
     </nav>
     <!-- / fixed header -->
-    <!-- sec_1 -->
-    <section class="sec sec_1">
+    <!-- sec_profile -->
+    <section class="sec sec_profile">
         <div class="container">
             <img alt="" class="abs_pic circle" src="img/abs_pic/circle.svg">
-            <img alt="" class="abs_pic line" src="img/abs_pic/line.svg">
-            <img alt="" class="abs_pic line-light" src="img/abs_pic/line.svg">
+            <img alt="" class="abs_pic dubl_line_vertical" src="img/abs_pic/dubl_line.svg">
             <div class="row">
                 <div class="col-md-8">
-                    <h1>Smart Expert - онлайн сообщество для развития, продвижения и монетизации экспертных знаний</h1>
-                    <p class="undertitle">Помогаем экспертам зарабатывать, общаться и развиваться</p>
-                    <a href="#" class="btn btn-primary">Начать использовать</a><br>
-                    <span class="label"><img src="img/sec_1/goal.svg" alt="">Наша цель: + 1 000 000 000 экспертов</span>
+                    <h1>Константин Лашкевич</h1>
+                    <p class="undertitle">Основатель и идеолог проекта “Позитивный Менеджмент”</p>
+                    <div class="card">
+                        <ul>
+                            <li><img src="img/sec_1/ok.svg" alt="ok">20 лет в бизнесе с акционерами Forbes</li>
+                            <li><img src="img/sec_1/ok.svg" alt="ok">11 лет управления холдингами</li>
+                            <li><img src="img/sec_1/ok.svg" alt="ok">Возглавлял холдинг “ННК” и вывел в лидеры рынка</li>
+                            <li><img src="img/sec_1/ok.svg" alt="ok">Возглавлял холдинг “Вторчермет НЛМК” и вывел в лидеры рынка</li>
+                            <li><img src="img/sec_1/ok.svg" alt="ok">Инвестор в проекте Smart Expert и автор методологии “Позитивный Менеджмент”</li>
+                        </ul>
+                    </div>
+                    <div class="works">
+                        <img src="img/sec_1/work_1.png" alt="">
+                        <img src="img/sec_1/work_2.png" alt="">
+                        <img src="img/sec_1/work_3.png" alt="">
+                    </div>
                 </div>
                 <div class="col-md-4">
                     <div class="img_wrapp">
-                        <img src="img/sec_1/main.svg" alt="SE">
+                        <img src="img/sec_1/konstantin.png" alt="SE">
                     </div>
                 </div>
             </div>
         </div>
     </section>
-    <!-- / sec_1 -->
-    <!-- sec_2 -->
-    <section class="sec sec_2">
-        <div class="container">
-            <div class="row flex-md-nowrap">
-                <a href="#" class="col-md col-6 media_wrapp">
-                    <div class="media">
-                        <div class="icon icon_1"></div>
-                        <p>Платформа для онлайн-обучения</p>
-                    </div>
-                </a>
-                <a href="#" class="col-md col-6 media_wrapp">
-                    <div class="media">
-                        <div class="icon icon_2"></div>
-                        <p>Инструменты маркетинга</p>
-                    </div>
-                </a>
-                <a href="#" class="col-md col-6 media_wrapp">
-                    <div class="media">
-                        <div class="icon icon_3"></div>
-                        <p>Глобальный <br> поиск экспертов</p>
-                    </div>
-                </a>
-                <a href="#" class="col-md col-6 media_wrapp">
-                    <div class="media">
-                        <div class="icon icon_4"></div>
-                        <p>Деловая <br> социальная сеть</p>
-                    </div>
-                </a>
-                <a href="#" class="col-md col-6 media_wrapp">
-                    <div class="media">
-                        <div class="icon icon_5"></div>
-                        <p>Продвижение личного бренда</p>
-                    </div>
-                </a>
-            </div>
-        </div>
-    </section>
-    <!-- / sec_2 -->
-    <!-- sec_3 -->
-    <section class="sec sec_3">
+    <!-- / sec_profile -->
+    <section class="sec sec_bio">
         <div class="container">
             <img alt="" class="abs_pic circle" src="img/abs_pic/circle.svg">
             <img alt="" class="abs_pic circle_orange" src="img/abs_pic/circle_orange.svg">
             <img alt="" class="abs_pic stone" src="img/abs_pic/stone.svg">
-            <img alt="" class="abs_pic dubl_line vertical" src="img/abs_pic/dubl_line.svg">
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="card_transparent">
+                        <div class="icon_avatar" style="background-image: url('img/sec_bio/konstantin.jpg')"></div>
+                        <h5>Константин Лашкевич</h5>
+                        <div class="soc_links_wrapp">
+                            <a href="#" class="item"><img src="img/soc_links/fb.svg" alt="fb"></a>
+                            <a href="#" class="item"><img src="img/soc_links/vk.svg" alt="vk"></a>
+                            <a href="#" class="item"><img src="img/soc_links/tw.svg" alt="tw"></a>
+                            <a href="#" class="item"><img src="img/soc_links/tg.svg" alt="tg"></a>
+                            <a href="#" class="item"><img src="img/soc_links/in.svg" alt="in"></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-8">
+                    <div class="card">
+                        <img src="img/sec_bio/quote.svg" alt="quote" class="quote">
+                        <p>Привет! <br> Меня зовут Константин Лашкевич. Уже более 20 лет я в бизнесе с акционерами Forbes, 11 лет управлял холдингами и выводил их в лидеры отрасли. Мой путь начался в университете, когда я создал несколько бизнесов, чтобы оплатить свое обучение по специальности “Менеджмент”. </p>
+                        <p>Спустя долгие годы собственного бизнеса и управления холдингами - я создал методологию “Позитивного Менеджмента”. <br> Я обучаю этому ТОП-менеджеров крупных компаний, помогая им внедрять в своей работе ту методику, которая помогала мне выводить холдинги в лидеры отрасли. </p>
+                        <p>В моей копилке есть уже несколько эффективных авторских курсов, которые помогают менеджерам и ТОП-менеджера лучше организовать работу своей команды, быстрее расти по карьерной лестнице и применять мои методики для достижения поставленных целей. </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- sec_3 -->
+    <section class="sec sec_3">
+        <div class="container">
+
             <div class="row align-items-center justify-content-between">
                 <div class="col-md-7">
                     <div class="embed-responsive embed-responsive-16by9">
