--- a/index.html
+++ b/index.html
@@ -118,6 +118,102 @@
         </div>
     </section>
     <!-- / sec_bio -->
+    <section class="sec sec_my_projects">
+        <div class="container">
+            <div class="sec_title">
+                <img src="img/sec_my_projects/title_label.svg" alt="title_label">
+                <h2>Мои проекты</h2>
+                <p>В сообществе Smart Expert меня окружают успешные специалисты, авторы <br> обучающих программ и эксперты, которые могут быть вам полезны!</p>
+            </div>
+            <div class="card table-responsive">
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th scope="col">№</th>
+                            <th scope="col">Контакт</th>
+                            <th scope="col">Экспертность</th>
+                            <th scope="col">Ответы на <br> вопросы</th>
+                            <th scope="col">Экспертные <br> статьи</th>
+                            <th scope="col">Положительные <br> отзывы</th>
+                            <th scope="col"></th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <th scope="row">1</th>
+                            <td>
+                                <a href="#" class="media">
+                                    <img src="img/sec_my_contacts/vitaliy.jpg" alt="">
+                                    <span>Виталий Тимошенко</span>
+                                </a>
+                            </td>
+                            <td class="expertise">Бизнес, Маркетинг, Продажи, Стартапы</td>
+                            <td>26</td>
+                            <td>26</td>
+                            <td>26</td>
+                            <td class="text-right"><a href="#" class="btn btn-blue">Подробнее</a></td>
+                        </tr>
+                        <tr>
+                            <th scope="row">2</th>
+                            <td>
+                                <a href="#" class="media">
+                                    <img src="img/sec_my_contacts/icaac.jpg" alt="">
+                                    <span>Виталий Тимошенко</span>
+                                </a>
+                            </td>
+                            <td class="expertise">Мотивация, Личная эффективность, коучинг</td>
+                            <td>26</td>
+                            <td>26</td>
+                            <td>44</td>
+                            <td class="text-right"><a href="#" class="btn btn-blue">Подробнее</a></td>
+                        </tr>
+                        <tr>
+                            <th scope="row">3</th>
+                            <td>
+                                <a href="#" class="media">
+                                    <img src="img/sec_my_contacts/vitaliy_d.jpg" alt="">
+                                    <span>Виталий Тимошенко</span>
+                                </a>
+                            </td>
+                            <td class="expertise">Управление, Менеджмент, командообразование</td>
+                            <td>26</td>
+                            <td>26</td>
+                            <td>54</td>
+                            <td class="text-right"><a href="#" class="btn btn-blue">Подробнее</a></td>
+                        </tr>
+                        <tr>
+                            <th scope="row">4</th>
+                            <td>
+                                <a href="#" class="media">
+                                    <img src="img/sec_my_contacts/igor.jpg" alt="">
+                                    <span>Виталий Тимошенко</span>
+                                </a>
+                            </td>
+                            <td class="expertise">Маркетинг, личный бренд, ораторство, коучинг </td>
+                            <td>26</td>
+                            <td>26</td>
+                            <td>6</td>
+                            <td class="text-right"><a href="#" class="btn btn-blue">Подробнее</a></td>
+                        </tr>
+                        <tr>
+                            <th scope="row">5</th>
+                            <td>
+                                <a href="#" class="media">
+                                    <img src="img/sec_my_contacts/iomtov.jpg" alt="">
+                                    <span>Виталий Тимошенко</span>
+                                </a>
+                            </td>
+                            <td class="expertise">Финансы, Доходы, Деньги, Состояние, Счастье</td>
+                            <td>26</td>
+                            <td>26</td>
+                            <td>11</td>
+                            <td class="text-right"><a href="#" class="btn btn-blue">Подробнее</a></td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </section>
     <!-- sec_my_contacts -->
     <section class="sec sec_my_contacts">
         <div class="container">
@@ -366,12 +462,19 @@
     <section class="sec sec_your_mentor">
         <div class="container">
             <div class="sec_title">
-                <img src="img/sec_my_contacts/title_label.svg" alt="title_label">
-                <h2>Истории успеха</h2>
-                <p>Что говорят о моих практикумах те, кто уже прошел обучение?</p>
+                <img src="img/sec_your_mentor/title_label.svg" alt="title_label">
+                <h2>Хочешь я стану твоим наставником в карьере и <br> бизнесе для кратного роста?</h2>
             </div>
             <div class="row">
-                
+                <div class="col-md-6 img_wrapp">
+                    <img src="img/sec_your_mentor/konstantin.png" alt="konstantin">
+                </div>
+                <div class="col-md-6">
+                    <div class="embed-responsive embed-responsive-16by9">
+                        <iframe src="https://www.youtube.com/embed/ZdODCz6y0kE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    </div>
+                    <a href="#" class="btn btn-success">Да хочу!</a>
+                </div>
             </div>
         </div>
     </section>
